--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -138,21 +138,56 @@
 
 .home__description {
   max-width: initial;
-  margin-bottom: var(--mb-2-25);
+  margin-bottom: var(--mb-2-5);
 }
 
-/* .home__img {
+.home__img {
   width: 250px;
   height: 250px;
-} */
+  box-shadow: inset 0 0 0 8px rgb(255 255 255 / 30%);
+}
+
+.home__scroll {
+  margin-left: 7.5rem;
+}
 
 /* For medium devices */
 @media screen and (max-width: 768px) {
-}
+  .home__content {
+    grid-template-columns: 0.5fr 3fr;
+    padding-top: 3.5rem;
+    /* sd */
+    align-items: center;
+  }
 
-@media screen and (max-width: 576px) {
+  .home__img {
+    order: initial;
+    justify-self: initial;
+  }
+
+  .home__data {
+    grid-column: 1/3;
+  }
+
+  .home__img {
+    box-shadow: inset 0 0 0 8px rgb(255 255 255 / 30%);
+    width: 200px;
+    height: 200px;
+  }
+
+  .home__scroll {
+    display: none;
+  }
 }
 
 /* For small devices */
 @media screen and (max-width: 350px) {
+  .home_img {
+    width: 180px;
+    height: 180px;
+  }
+  .home__hand {
+    width: 22px;
+    height: 22px;
+  }
 }
