--- a/src/App.css
+++ b/src/App.css
@@ -71,7 +71,7 @@
 }
 
 html {
-  scroll-behavior: smooth;
+  scroll-behavior: smooth !important;
 }
 
 body,
@@ -85,6 +85,7 @@ textarea {
 body {
   background-color: var(--body-color);
   color: var(--text-color);
+  scroll-behavior: smooth !important;
 }
 
 h1,
