updated profileImg location

--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -59,7 +59,7 @@
 }
 
 .home__img {
-  background: url(../../assets/SelvaImg.jpg);
+  background: url(../../assets/profileImg/SelvaImg.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
